--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <title>
         Hello bro
     </title>
+    <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
 </head>
 <body>
     <h1>Hello world!</h1>
