--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
         Hello bro
     </title>
     <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
+    <style>
+        body{
+            font-family: 'Lato';
+        }
+    </style>
 </head>
 <body>
     <h1>Hello world!</h1>
